<resources>
    <string name="app_name">ComeraCodeChallenge</string>
    <string name="folders">Folders</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="all">All</string>
    <string name="no_media">No Media</string>
    <string name="no_media_title">No media title</string>
    <string name="permission_denied">permission denied</string>
</resources>