<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/filter_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/top_bar_color"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bar_ripple"
            android:text="@string/all"/>

        <View
            android:layout_width="2dp"
            android:layout_marginVertical="4dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/unselected"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bar_ripple"
            android:text="@string/videos"/>

        <View
            android:layout_width="2dp"
            android:layout_marginVertical="4dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/unselected"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bar_ripple"
            android:text="@string/photos"/>

        <View
            android:layout_width="2dp"
            android:layout_marginVertical="4dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/folders"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/unselected"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bar_ripple"
            android:text="@string/folders"/>

    </LinearLayout>

    <TextView
        android:id="@+id/folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/all"
        android:background="@color/white"
        android:textColor="@color/black"
        android:padding="@dimen/folder_name_padding"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_bar"/>

    <TextView
        android:id="@+id/no_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/no_media_text_size"
        android:visibility="gone"
        android:text="@string/no_media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/media_list_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:clipToPadding="false"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folder_name"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </FrameLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/folder_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permission_denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/permission_denied"
        android:textColor="@color/black"
        android:padding="@dimen/folder_name_padding"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>